Stretch-Project-III

--- a/about.html
+++ b/about.html
@@ -12,8 +12,8 @@
 <body>
     <div class="navbar">
         <a href="file:///C:/Users/bowbr/devmtn/precourse/Britt-Git-Repo/basecamp-html/contact.html">CONTACT</a>
-        <a href="file:///C:/Users/bowbr/devmtn/precourse/Britt-Git-Repo/basecamp-html/about.html">ABOUT</a>
-        <a href="file:///C:/Users/bowbr/devmtn/precourse/Britt-Git-Repo/basecamp-html/index.html" class="active">HOME</a>
+        <a href="file:///C:/Users/bowbr/devmtn/precourse/Britt-Git-Repo/basecamp-html/about.html" class="active">ABOUT</a>
+        <a href="file:///C:/Users/bowbr/devmtn/precourse/Britt-Git-Repo/basecamp-html/index.html">HOME</a>
         <a href="file:///C:/Users/bowbr/devmtn/precourse/Britt-Git-Repo/basecamp-html/index.html" class="left">BUSINESS
             LINK</a>
     </div>
@@ -44,12 +44,12 @@
     </div>
     <div class="box">
         <span class="c">
-            Deadlights jack lad schooner scallywag dance the hempen jig carouser broadside cable strike colors. Bring a
-            spring upon her cable holystone blow the man down spanker Shiver me timbers to go on account lookout wherry
-            doubloon chase. Belay yo-ho-ho keelhaul squiffy black spot yardarm spyglass sheet transom heave to. wherry
-            doubloon chase. Belay yo-ho-ho keelhaul squiffy black spot yardarm spyglass sheet transom heave to. Bring a
-            spring upon her cable holystone blow the man down spanker Shiver me timbers. Deadlights jack lad schooner scallywag dance the hempen jig carouser broadside cable strike colors. Bring a
-            spring upon her cable holystone blow the man down upon her cable holystone blow.
+                Deadlights jack lad schooner scallywag dance the hempen jig carouser broadside cable strike colors. Bring a
+                spring upon her cable holystone blow the man down spanker Shiver me timbers to go on account lookout wherry
+                doubloon chase. Belay yo-ho-ho keelhaul squiffy black spot yardarm spyglass sheet transom heave to. wherry
+                doubloon chase. Belay yo-ho-ho keelhaul squiffy black spot yardarm spyglass sheet transom heave to. Bring a
+                spring upon her cable holystone blow the man down spanker Shiver me timbers. Deadlights jack lad schooner scallywag dance the hempen jig carouser broadside cable strike colors. Bring a
+                spring upon her cable holystone blow the man down upon her cable holystone blow.
         </span>
         <span class="d">
             <iframe src="https://giphy.com/embed/JLBT3PV3tOvIY" width="480" height="260" frameBorder="0" class="giphy-embed"
